# NBE

./: .gitignore
NBE/: CHANGELOG.md  NBE.cabal  run.sh  stack.yaml
NBE/src/: Main.hs
NBE/src/Parser/: Setup.hs  test.txt
NBE/src/Parser/Syntax/: Abs.hs  Doc.txt  ErrM.hs  Layout.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs  Test.hs
NBE/src/Parser/grammar/: Syntax.cf
NBE/src/Untyped/: Foil.hs  Free.hs  Simple.hs
cpp/: eval.cpp
